Change PDP topic to lower case for kafka compability
Issue-ID: POLICY-4402
Change-Id: I77fee1d194f884022b42094838b96070c3eda663
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>